--- a/pom.xml
+++ b/pom.xml
@@ -107,9 +107,9 @@
                 <version>2.0.3</version>
                 <configuration>
                     <jdkVersion>1.8</jdkVersion>
-                    <appName>heroblock</appName>
+                    <appName>hero-block</appName>
                     <processTypes>
-                        <web>java -jar target/hero-1.0-jar-with-dependencies.jar</web>
+                        <web>java -jar target/heroblock-1.0-SNAPSHOT-jar-with-dependencies.jar</web>
                     </processTypes>
                 </configuration>
             </plugin>
